# audioio

./: .clang-tidy  .gitignore  CITATION  CMakeLists.txt  CONTRIBUTING.md  README.md  setup.py
.circleci/: config.yml  config.yml.in
.circleci/build_docs/: install_wheels.sh
.github/: process_commit.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build-conda-m1.yml  build-conda-windows.yml  build-wheels-m1.yml  build_conda_linux.yml  build_conda_macos.yml  build_docs.yml  build_wheels_linux.yml  build_wheels_macos.yml  build_wheels_windows.yml  docstring_parameters_sync.yml  unittest-linux-gpu.yml
cmake/: TorchAudioHelper.cmake
docs/: Makefile  make.bat  post_process_dispatcher.py
docs/source/: Doxyfile  backend.rst  build.ffmpeg.rst  build.jetson.rst  build.linux.rst  build.windows.rst  compliance.kaldi.rst  conf.py  datasets.rst  functional.rst  hw_acceleration_tutorial.ipynb  index.rst  installation.rst  io.rst  kaldi_io.rst  libtorchaudio.rst  libtorchaudio.stream_reader.rst  libtorchaudio.stream_writer.rst  logo.rst  models.decoder.rst  models.rst  pipelines.rst  (+12 more)
examples/libtorchaudio/: CMakeLists.txt  README.md
examples/libtorchaudio/augmentation/: CMakeLists.txt  README.md  create_jittable_pipeline.py
examples/libtorchaudio/speech_recognition/: CMakeLists.txt  README.md  build_pipeline_from_fairseq.py  build_pipeline_from_huggingface_transformers.py
packaging/: build_conda.sh  pkg_helpers.bash
tools/: convert_fairseq_models.py  convert_voxpopuli_models.py
torchffmpeg/: __init__.py  kaldi_io.py
(+462 files in other folders)
